kubernetes-manifests/backend-nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-nodejs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-nodejs
  template:
    metadata:
      labels:
        app: backend-nodejs
    spec:
      containers:
        - name: backend-nodejs-container
          image: sujalsharma/sheetwise-nodejs-backend:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: sheetwise-nodejs-pv
              mountPath: /data/db
      volumes:
        - name: sheetwise-nodejs-pv
          persistentVolumeClaim:
            claimName: sheetwise-nodejs-pvc
