kubernetes-manifests/backend-ws-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-ws-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-ws
  template:
    metadata:
      labels:
        app: backend-ws
    spec:
      containers:
        - name: backend-ws-container
          image: sujalsharma/sheetwise-ws-backend:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: sheetwise-ws-pv
              mountPath: /data/db
      volumes:
        - name: sheetwise-ws-pv
          persistentVolumeClaim:
            claimName: sheetwise-ws-pvc
