kubernetes-manifests/backend-nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-nodejs-service
  labels:
    app: auth-nodejs
spec:
  selector:
    app: backend-nodejs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
