kubernetes-manifests/backend-ws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ws
  labels:
    app: backend-ws
spec:
  selector:
    app: backend-ws
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
  sessionAffinity: ClientIP
