kubernetes-manifests/Nginx-Route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sheetwise-backend-route
spec:
  parentRefs:
  - name: sheetwise-gateway
  hostnames:
  - "*"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: backend-nodejs-service.default.svc.cluster.local
      port: 3000
