kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tornado-socket
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
spec:
  tls:
    - hosts:
        - ws.sujalsharma.in
        - api.sujalsharma.in
      secretName: websocket-tls
  ingressClassName: nginx
  rules:
  - host: ws.sujalsharma.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-ws
            port:
              number: 8080
  - host: api.sujalsharma.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-nodejs-service
            port:
              number: 3000
